fix: todo box alignment

--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -45,10 +45,10 @@ button {
 }
 
 .taskText {
-  width: 39.5rem;
+  width: 100%;
   color: var(--gray-100);
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.225;
-  padding: 0 1.125rem 0 1rem;
+  padding: 0 0.75rem
 }
